Fix aside zindex and overflow

--- a/css/_sass/main_phone.sass
+++ b/css/_sass/main_phone.sass
@@ -2,7 +2,8 @@
 html body
   // font-size: 12px
   aside
-    background: red
+    z-index: 1
+    overflow: auto
     display: none
   section
     padding: 0
